fix: Swagger not working with Authoriztion tokens and adding generated docs to code
